--- a/css/style.css
+++ b/css/style.css
@@ -401,6 +401,7 @@ main section.cards .cards-item {
   border-radius: 20px;
   position: relative;
   transition: 0.3s;
+  margin-bottom: 15px;
 }
 main section.cards .cards-item img {
   width: 100%;
@@ -762,17 +763,17 @@ main section.investors .form-section .form-body .leftSec .form_bg_img {
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-main section.investors .form-section .form-body .leftSec p {
+main section.investors .form-section .form-body .leftSec .text-sec {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-main section.investors .form-section .form-body .leftSec p img {
+main section.investors .form-section .form-body .leftSec .text-sec img {
   width: 395px;
   height: 121px;
 }
-main section.investors .form-section .form-body .leftSec p span {
+main section.investors .form-section .form-body .leftSec .text-sec span {
   position: absolute;
   width: 100%;
   left: 0;
@@ -915,6 +916,14 @@ footer .wrapper ul li:first-child p {
 footer .wrapper ul li:last-child {
   display: flex;
   justify-content: center;
+}
+footer .wrapper ul li.social-footer a {
+  display: inline-block;
+  border: 1px solid #B6B9BC;
+  border-right: none;
+}
+footer .wrapper ul li.social-footer a:last-child {
+  border-right: 1px solid #B6B9BC;
 }
 footer .wrapper hr {
   background: rgba(251, 253, 255, 0.4);
@@ -1272,6 +1281,483 @@ footer .wrapper .copy-right {
   background: #5666F2;
   border-radius: 8px;
   color: #ffffff !important;
+}
+
+@media screen and (max-width: 576px) {
+  .navbar-brand img {
+    height: 38px;
+  }
+  main section.banner-section {
+    display: block !important;
+    height: 100vh;
+    padding-top: 116px;
+  }
+  main section.banner-section .container {
+    height: 100%;
+    position: relative;
+  }
+  main section.banner-section .container .row,
+  main section.banner-section .container .col {
+    height: 100%;
+  }
+  main section.banner-section .container .banner-sec {
+    height: 100%;
+  }
+  main section.banner-section .container .banner-sec .mobile-view {
+    position: absolute;
+    left: 15px;
+    right: 15px;
+    bottom: 40px;
+  }
+  main section.banner-section .container .banner-sec h1 {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 40px;
+  }
+  main section.banner-section .container .banner-sec p {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    width: auto;
+  }
+  main section.banner-section .container .banner-sec .twoBtns {
+    gap: 18px;
+    justify-content: space-between;
+  }
+  main section.banner-section .container .banner-sec .twoBtns button {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    padding: 15px 36px;
+  }
+  main section.banner-section .container .banner-sec .grey-sec {
+    height: auto;
+    width: 100%;
+    background: transparent;
+    padding: 0px;
+  }
+  main section.banner-section .container .banner-sec .grey-sec .grey-sec-child {
+    width: auto;
+    padding: 0px 11px;
+    border-right: 0.5px solid rgba(255, 255, 255, 0.6);
+  }
+  main section.banner-section .container .banner-sec .grey-sec .grey-sec-child span {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
+  }
+  main section.banner-section .container .banner-sec .grey-sec .grey-sec-child p {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
+  }
+  main section.why-invest .invest-content {
+    padding-top: 34px;
+    display: block;
+  }
+  main section.why-invest .invest-content h5 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 40px;
+  }
+  main section.why-invest .invest-content ul.invest-sections {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  main section.why-invest .invest-content ul.invest-sections li {
+    width: calc(50% - 20px);
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    margin: 9px;
+    padding: 17px;
+  }
+  main section.why-invest .invest-content ul.invest-sections li img {
+    width: 48px;
+    height: 48px;
+    margin: 0 auto;
+    display: block;
+  }
+  main section.why-invest .invest-content ul.invest-sections li h6 {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  main section.why-invest .invest-content ul.invest-sections li p {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  main section.why-invest .invest-content .token-folio {
+    position: static;
+  }
+  main section.why-invest .invest-content .token-folio .tokenfolio_con {
+    background: url(../img/black_patch.svg) center center no-repeat;
+    background-size: cover;
+    padding: 20px;
+    background-color: #14172B;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    margin-top: 40px;
+  }
+  main section.why-invest .invest-content .token-folio .tokenfolio_con ul {
+    display: block;
+    width: auto;
+  }
+  main section.why-invest .invest-content .token-folio .tokenfolio_con ul li {
+    display: block;
+    height: auto;
+    text-align: center;
+  }
+  main section.why-invest .invest-content .token-folio .tokenfolio_con ul li h4 {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    text-align: center;
+  }
+  main section.why-invest .invest-content .token-folio .tokenfolio_con ul li p {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    margin: 20px 0px;
+  }
+  main section.why-invest .invest-content .token-folio .tokenfolio_con ul li button {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    padding: 17px 28px;
+    margin: 0 auto;
+    display: inline-block;
+    margin-bottom: 23px;
+  }
+  main section.why-invest .invest-content .token-folio .tokenfolio_con ul li img {
+    width: 150px;
+    margin: 0 auto;
+    display: block;
+  }
+  main section.solving-problem {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  main section.solving-problem .content h6 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    display: block;
+    margin-bottom: 26px;
+  }
+  main section.solving-problem .content #accordion .card .collapse,
+  main section.solving-problem .content #accordion .card .collapsing {
+    font-size: 12px;
+    line-height: 126%;
+    padding-left: 46px;
+    padding-right: 18px;
+  }
+  main section.solving-problem .content #accordion .card .card-header {
+    padding: 0;
+    border: none;
+    background: no-repeat;
+  }
+  main section.solving-problem .content #accordion .card .card-header h5 button p {
+    font-size: 14px;
+    line-height: 126%;
+  }
+  main section.solving-problem .content #accordion .card .card-header h5 button p img {
+    margin-right: 10px;
+    max-width: 32px;
+  }
+  main section.solving-problem .content #accordion .card .card-header h5 button img {
+    max-width: 15px;
+  }
+  main section.solving-problem .content-img {
+    margin-top: 17px;
+  }
+  main section.solving-problem .content-img img {
+    border-radius: 10px;
+  }
+  main section.cards {
+    padding: 40px 0;
+  }
+  main section.cards .cards-item .cards-content h5 {
+    font-size: 18px;
+    line-height: 20px;
+  }
+  main section.cards .cards-item .cards-content p {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  main section.cards .col {
+    padding: 0;
+  }
+  main section.partnerships-brands .imgslider {
+    padding: 40px 0px;
+  }
+  main section.partnerships-brands h6 {
+    font-size: 26px;
+    line-height: 31px;
+  }
+  main section.become-community .wrapper ul {
+    display: block;
+    text-align: center;
+  }
+  main section.become-community .wrapper ul li img {
+    margin: 0;
+    width: 100%;
+    border-radius: 10px;
+  }
+  main section.become-community .wrapper ul li h3 {
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    letter-spacing: -0.015em;
+  }
+  main section.become-community .wrapper ul li button {
+    font-size: 15px;
+    line-height: 18px;
+    padding: 17px 34px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  main section.investors {
+    height: auto;
+    background: linear-gradient(180deg, rgb(249, 249, 255) 86%, rgb(20, 23, 43) 86%);
+  }
+  main section.investors h6 {
+    font-size: 26px;
+    line-height: 31px;
+    padding: 40px 0px;
+  }
+  main section.investors .owl-theme .owl-nav.disabled + .owl-dots {
+    position: relative;
+    bottom: 37px;
+    right: 17px;
+  }
+  main section.investors .owl-theme .owl-nav.disabled + .owl-dots span {
+    width: 9px !important;
+    height: 9px !important;
+  }
+  main section.investors .testimonial {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0px 15px;
+  }
+  main section.investors .testimonial:after {
+    content: "";
+    top: -21px;
+    left: -13px;
+    z-index: 1;
+    width: 58px;
+    height: 58px;
+    background-size: contain;
+  }
+  main section.investors .testimonial .slider-item {
+    display: block;
+    padding: 25px 34px;
+  }
+  main section.investors .testimonial .slider-item .left {
+    width: 100%;
+    margin-right: 0;
+  }
+  main section.investors .testimonial .slider-item .left img {
+    width: 63px;
+    height: 63px;
+  }
+  main section.investors .testimonial .slider-item .left h5 {
+    font-size: 12px;
+    line-height: 126%;
+    letter-spacing: 0.04em;
+    margin-top: 12px;
+    margin-bottom: 0px;
+  }
+  main section.investors .testimonial .slider-item .left span {
+    font-size: 12px;
+    line-height: 126%;
+    letter-spacing: 0.04em;
+  }
+  main section.investors .testimonial .slider-item .right p {
+    font-size: 12px;
+    line-height: 126%;
+  }
+  main section.investors .form-section {
+    border-radius: 0;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+  }
+  main section.investors .form-section .form-body {
+    display: block;
+    height: auto;
+  }
+  main section.investors .form-section .form-body .leftSec {
+    width: 100%;
+  }
+  main section.investors .form-section .form-body .leftSec .form_bg_img {
+    border-radius: 0px;
+  }
+  main section.investors .form-section .form-body .leftSec .text-sec {
+    width: 100%;
+    padding: 0px 15px;
+    text-align: center;
+  }
+  main section.investors .form-section .form-body .leftSec .text-sec span {
+    display: block;
+    position: static;
+  }
+  main section.investors .form-section .form-body .leftSec .text-sec img {
+    width: 218px;
+  }
+  main section.investors .form-section .form-body .rightSec {
+    width: 100%;
+    overflow: hidden;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin-top: 30px;
+    background: #fff;
+    padding: 35px 16px;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form {
+    overflow: hidden;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form h5 {
+    line-height: 126%;
+    text-align: center;
+    letter-spacing: 0.05em;
+    font-size: 20px;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form .mobile-view-scroll {
+    overflow: auto;
+    white-space: nowrap;
+    margin-bottom: 21px;
+    padding-top: 12px;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form ul {
+    display: block;
+    min-width: 548px;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form ul li {
+    padding: 12px 16px;
+    margin-right: 18px;
+    margin-top: 0;
+    margin-bottom: 0;
+    display: inline-block;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form form ul li {
+    font-size: 10px;
+    line-height: 12px;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form form label {
+    font-size: 14px;
+    line-height: 180%;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form .totalSec p span {
+    font-size: 14px;
+    line-height: 180%;
+  }
+  main section.investors .form-section .form-body .rightSec .invest-form .investBtn {
+    font-size: 15px;
+    line-height: 18px;
+    padding: 16px 36px;
+  }
+  main section.howitworks {
+    height: auto;
+    padding-bottom: 40px;
+  }
+  main section.howitworks h5 {
+    font-size: 26px;
+    line-height: 31px;
+    padding-top: 41px;
+  }
+  main section.howitworks .wrapper {
+    display: block;
+  }
+  main section.howitworks .wrapper .dottedArr1,
+  main section.howitworks .wrapper .dottedArr2 {
+    display: none;
+  }
+  main section.howitworks .wrapper .box-body {
+    width: 100%;
+    text-align: center;
+  }
+  main section.howitworks .wrapper .box-body .box-content {
+    background: url(../img/curvebox.svg) center center no-repeat;
+    background-size: 366px 318px;
+    width: 100%;
+    height: 100%;
+    display: block;
+    padding: 45px 57px;
+    min-height: 326px;
+  }
+  main section.howitworks .wrapper .box-body .box-content img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 30px;
+    margin-top: 31px;
+  }
+  main section.howitworks .wrapper .box-body .box-content h6 {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  main section.howitworks .wrapper .box-body .box-content p {
+    font-size: 12px;
+    line-height: 19px;
+  }
+  footer {
+    padding-top: 26px;
+  }
+  footer .wrapper ul {
+    display: block;
+    text-align: center;
+  }
+  footer .wrapper ul li img {
+    width: 50.45px;
+  }
+  footer .wrapper ul li.social-footer img {
+    width: 46px;
+  }
+  #bookAppoinment .modal-dialog {
+    min-width: 100%;
+  }
+  #bookAppoinment .modal-dialog .modal-content {
+    height: 948px;
+    padding: 25px 22px;
+    display: block;
+  }
+  #bookAppoinment .modal-dialog .modal-content .modal-body h3 {
+    font-size: 20px;
+    line-height: 126%;
+  }
+  #bookAppoinment .modal-dialog .modal-content .modal-body p {
+    font-size: 12px;
+    line-height: 126%;
+    margin-bottom: 36px;
+  }
+  #bookAppoinment .modal-dialog .modal-content .modal-body form ul {
+    display: block;
+    width: 100%;
+  }
+  #bookAppoinment .modal-dialog .modal-content .modal-body form ul li {
+    width: auto;
+    margin-bottom: 23px;
+    float: inherit;
+  }
+  #bookAppoinment .modal-dialog .modal-content .modal-body form ul li label {
+    font-size: 14px;
+    line-height: 180%;
+  }
+  #bookAppoinment .modal-dialog .modal-content .modal-body form ul li input {
+    font-size: 12px;
+    line-height: 180%;
+    padding: 12px 16px px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
